--- a/Defaults/Sitemap.scss
+++ b/Defaults/Sitemap.scss
@@ -21,6 +21,7 @@
 
 	#sitemapTitle {
 		font-size: xx-large;
+		margin-bottom: 14px;
 		color: var(--text_accent_1);
 	}
 
@@ -61,6 +62,7 @@
 				color: var(--text)!important;
 				opacity: 0.4;
 				&:hover {
+					text-decoration: underline!important;
 					opacity: 0.8;
 				}
 			}
@@ -85,10 +87,11 @@
 		font-size: large;
 	}
 	#sitemapLink {
-		color: var(--text)!important
+		color: var(--text)!important;
+		transition: color 0.2s;
 	}
 	#sitemapLink:hover {
-		color: var(--text_accent_1)!important
+		color: var(--text_highlight)!important
 	}
 
 	#settingsRow {
