--- a/Defaults/Sitemap.scss
+++ b/Defaults/Sitemap.scss
@@ -61,6 +61,7 @@
 				font-size: medium;
 				color: var(--text)!important;
 				opacity: 0.4;
+				font-weight: 500;
 				&:hover {
 					text-decoration: underline!important;
 					opacity: 0.8;
