--- a/AuthNew/AuthIcon.scss
+++ b/AuthNew/AuthIcon.scss
@@ -100,9 +100,13 @@
 			box-shadow: 0px 0px 8px var(--bg-color);
 		}
 	}
+	&>a.toggle {
+		width: 50px;
+		height: 50px;
+	}
 	&>.chevron-down {
 		stroke: var(--text);
-		transition: color 0.2s, stroke 0.2s;
+		transition: color 0.2s, stroke;
 		&:hover {
 			stroke: var(--text-highlight)
 		}
@@ -139,7 +143,7 @@
 			
 	
 	@media (orientation: portrait) {
-		&>span {
+		&>.chevron-down {
 			display: none!important;
 		}
 	}
