--- a/Panes/MediaFlowPane.scss
+++ b/Panes/MediaFlowPane.scss
@@ -60,7 +60,7 @@
 					max-width: 100%;
 				}
 			}
-			&>uix-text {
+			&>uix-markdown {
 				text-align: left;
 				flex: 1;
 				font-size: large;
