--- a/Lists/ListPane.scss
+++ b/Lists/ListPane.scss
@@ -67,7 +67,7 @@
 				box-sizing: border-box;
 				padding: 30px;
 				padding-right: 60px;
-				uix-text {
+				uix-markdown {
 					p {
 						margin: 0;
 						padding: 0;
