--- a/Panes/FAQSectionPane.scss
+++ b/Panes/FAQSectionPane.scss
@@ -24,7 +24,7 @@
 				display: flex;
 				flex-direction: column;
 			}
-			uix-text {
+			uix-markdown {
 				display: inline-flex!important;
 				flex-direction: column;
 				margin-bottom: 10px;
