--- a/Panes/AppDownloadPane.scss
+++ b/Panes/AppDownloadPane.scss
@@ -5,7 +5,7 @@
 	@media screen and (max-width: 700px) { 
 		width: calc(100% - 40px);
 	}
-	uix-text p {
+	uix-markdown p {
 		padding: 0;
 		margin: 0!important;
 		strong {
