--- a/Panes/ArticlePane.scss
+++ b/Panes/ArticlePane.scss
@@ -81,7 +81,7 @@
 					margin-top: 10px;
 					font-size: large;
 				}
-				uix-text {
+				uix-markdown {
 					p {
 						margin: 0;
 						padding: 0;
