fix toggle switch color for light mode

--- a/Defaults/ToggleSwitch.scss
+++ b/Defaults/ToggleSwitch.scss
@@ -54,7 +54,7 @@
 				display: flex;
 				justify-content: center;
 				align-items: center;
-				background-color: white;
+				background-color: var(--text);
 				-webkit-transition: .4s;
 				transition: .4s;
 			}
