--- a/AuthNew/AuthIcon.scss
+++ b/AuthNew/AuthIcon.scss
@@ -1,16 +1,5 @@
 
 :host {
-	position: relative;
-	--size: 50px;
-	--top: calc(var(--size) / 2 - 20px);
-	$dropdown-size: 420px;
-	--dropdown-size: $dropdown-size;
-	$overflow-size: $dropdown-size + 80px;
-	* {
-		margin: 0!important;
-		padding: 0!important;
-	}
-	
 	.spinner {
 		transition: transform 0.2s, opacity 0.2s;
 		height: var(--size)!important;
@@ -30,140 +19,77 @@
 		animation: spin 1.4s linear infinite;
 		border-radius: 50%;
 	}
+	div[slot="content"] {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		gap: 8px;
+
+		&>a {
+			user-select: none;
+			position: relative;
+			height: 100%;
+			box-sizing: border-box;
+			background-color: transparent;
+			transition: background-color 0.1s;
+			padding: 2px!important;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			border-radius: 100%;
+			img {
+				border-radius: 100%;
+				height: 100%;
+				transition: all 0.1s;
+			}
+		}
+		&>a.toggle {
+			width: 50px;
+			height: 50px;
+		}
+		&>.chevron-down {
+			fill: var(--text);
+			transition: color 0.2s, fill;
+			&:hover {
+				fill: var(--text-highlight)
+			}
+			transition: transform 0.3s;
+		}
+	}
+
 	&.connected {
+		&:hover {
+			&>a {
+				background-color: var(--text);
+			}
+			&>a img {
+				box-shadow: 0px 0px 8px var(--bg-color);
+			}
+		}
 		.spinner {
 			opacity: 0;
 		}
+	}
+	&.expanded > .chevron-down {
+		transform: rotate(180deg)!important;
 	}
 	&.error {
 		filter: grayscale(1) brightness(1.3);
 		-webkit-filter: grayscale(1) brightness(1.3);
 	}
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	grid-gap: 10px;
-	gap: 10px;
-	height: var(--size);
-	width: fit-content;
-	position: relative;
-	flex-direction: row;
-	position: relative;
-	&>#backdrop {
-		position: fixed;
-		top: 0;
-		opacity: 0;
-		transition: opacity 0.5s;
-		bottom: 0;
-		left: 0;
-		right: 0;
-		width: 100%;
-		height: 100%;
-		backdrop-filter: blur(20px);
-		-webkit-backdrop-filter: blur(20px);
-		display: none;
-		z-index: -1;
-	}
-	&>a {
-		user-select: none;
-		position: relative;
-		height: 100%;
-		width: 100%;
-		box-sizing: border-box;
-		background-color: transparent;
-		transition: background-color 0.1s;
-		padding: 2px!important;
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		border-radius: 100%;
-		img {
-			border-radius: 100%;
-			height: 100%;
-			transition: all 0.1s;
-		}
-	}
-	&:not(.connected) {
-		cursor: progress;
-	}
-	&.error {
-		cursor: not-allowed;
-		iframe {
-			display: none!important;
-		}
-	}
-	&.connected:hover {
-		&>a {
-			background-color: var(--text);
-		}
-		&>a img {
-			box-shadow: 0px 0px 8px var(--bg-color);
-		}
-	}
-	&>a.toggle {
-		width: 50px;
-		height: 50px;
-	}
-	&>.chevron-down {
-		fill: var(--text);
-		transition: color 0.2s, fill;
-		&:hover {
-			fill: var(--text-highlight)
-		}
-		transition: transform 0.3s;
-	}
-	&.expanded > .chevron-down {
-		transform: rotate(180deg)!important;
-	}
-
 	
 	&>iframe {
-		padding: 0;
-		margin: 0;
-		right: -12px; // shadow
-		border: none;
-		outline: transparent;
-		// border: 2px solid red;
-		position: absolute;
-
-		width: calc(100vw - 20px);
-		max-width: var(--dropdown-size);
-		top: calc(var(--size) + var(--top) - 5px);
-		transition: transform 0.2s linear, opacity 0.3s;
-		opacity: 0;
-		background-color: transparent;
-		transform: translateX(20vw);
-		pointer-events: none;
+		&.left {
+			left: 0;//-38px;
+		}
+		&.right {
+			right: 0;//-12px;
+		}
 	}
-	&.expanded iframe {
-		opacity: 1;
-		pointer-events: all;
-		transform: translateX(0vw);
-	}
-			
 	
 	@media (orientation: portrait) {
-		&>.chevron-down {
+		uix-auth-component .chevron-down {
 			display: none!important;
-		}
-	}
-	@media (orientation: portrait) and (max-width: 800px) {
-		&.expanded > #backdrop {
-			display: block;
-			opacity: 1;
-		}
-	}
-	@media screen and (max-width: ($overflow-size)) {
-		&>iframe {
-			margin: auto!important;
-			position: fixed;
-			margin-top: 20px!important;
-			left: 0;
-			right: 0;
-		}
-		&.expanded > #backdrop {
-			display: block;
-			opacity: 1;
 		}
 	}
 }
