Work on sitemap

--- a/Defaults/Sitemap.scss
+++ b/Defaults/Sitemap.scss
@@ -5,7 +5,7 @@
 		text-decoration: none!important;
 	}
 	width: 100%;
-	background-color: var(--bg_color)!important;
+	background-color: var(--bg_color);
 	border-top: 1px solid darkgray;
 	display: flex;
 	&>div {
