--- a/Defaults/Sitemap.scss
+++ b/Defaults/Sitemap.scss
@@ -1,4 +1,5 @@
 @use "../utils.scss" as *;
+@import url("./Standalone.scss");
 
 :host {
 	a {
@@ -78,8 +79,9 @@
 		}
 		#settingsRow {
 			float: none!important;
-			justify-content: space-between;
-			margin-top: 10px!important;
+			justify-content: flex-start;
+			margin-top: 20px!important;
+			gap: 10px;
 		}
 	}
 	@media screen and (max-width: 300px) {
