--- a/Defaults/UnytFooter.scss
+++ b/Defaults/UnytFooter.scss
@@ -1,12 +1,14 @@
+@import url("./Standalone.scss");
+
 :host {
 	height: min-content!important;
 	background: var(--bg_color)!important;
 	display: flex;
 	width: 100%;
 	align-items: center;
-	border-top: 1px solid rgba(255, 255, 255, 0.2);
+	border-top: 1px solid var(--border-color);
 	padding: 10px;
-    	box-sizing: border-box;
+	box-sizing: border-box;
 	a {
 		text-decoration: none;
 		&:hover {
