Fix margin-top of newsletter

--- a/Newsletter/Newsletter.scss
+++ b/Newsletter/Newsletter.scss
@@ -76,6 +76,7 @@
 					font-size: xx-large;
 					line-height: 100%;
 					margin-bottom: 4px;
+					margin-top: 0px;
 					color: var(--text_highlight)
 				}
 				&>span {
