--- a/Defaults/Sitemap.scss
+++ b/Defaults/Sitemap.scss
@@ -125,7 +125,7 @@
 		margin-left: 7px;
 		margin-right: 4px;
 	}
-	#apperanceToggle {
+	#appearanceToggle {
 		display: flex!important;
 		justify-content: center;
 		align-items: center;
